fixed overflow issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body, html, #root {
   padding: 0;
   height: 100%;
   font-family: 'VT323';
+  overflow:hidden;
 }
 
 .app {
@@ -14,6 +15,7 @@ body, html, #root {
 
 .blurStuff {
   transition: filter 0.3s ease;
+  transform: scale(1.05);
 }
 
 .blurStuff.blur {
